@@ -2,7 +2,7 @@
 
 	"manifest_version": 2,
 	"name": "MlDonkeyFox2",
-	"version": "0.14",
+	"version": "0.16",
 
 	"applications": {
 		"gecko": {
