@@ -1,3 +1,6 @@
+mldonkeyfox2 (0.15)
+  * bittorrent option is now used
+  
 mldonkeyfox2 (0.14)
   * Messages are animated
   
